--- a/raon-control/schedule.html
+++ b/raon-control/schedule.html
@@ -579,6 +579,13 @@
 
         // Create schedule and shift list
         makeSchedule();
+
+        // Show up first shift list
+        var scheduleButtonClass = document.getElementsByClassName('scheduleButton');
+        if (scheduleButtonClass[0]) {
+            scheduleButtonClass[0].click();
+        }
+
     }
 
     function nextCalendar() {
@@ -607,11 +614,16 @@
 
         // Create next month
         today = new Date(today.getFullYear(), today.getMonth() + 1, today.getDate());
-        console.log(today);
         makeCalendar();
 
         // Create schedule and shift list
         makeSchedule();
+
+        // Show up first shift list
+        var scheduleButtonClass = document.getElementsByClassName('scheduleButton');
+        if (scheduleButtonClass[0]) {
+            scheduleButtonClass[0].click();
+        }
     }
 
     function makeCalendar() {
@@ -952,10 +964,12 @@
     }
 
     window.onload = function () {
+        var myVar = setInterval(timer, 1000);
+
         makeCalendar();
         makeSchedule();
         // scheduleDetail();
-        shifterList(0, '#8E44AD') ;
+        shifterList(0, '#8E44AD');
     }
 </script>
 
