--- a/raon-control/test/getData.html
+++ b/raon-control/test/getData.html
@@ -35,14 +35,31 @@
         xhttp.send();
     }
 
+    function getScheduleDatabase() {
+        var xhttp = new XMLHttpRequest();
+        xhttp.onreadystatechange = function () {
+            if (this.readyState == 4 && this.status == 200) {
+
+                let jsonValue = JSON.parse(this.responseText);
+                document.getElementById('value').innerHTML = jsonValue[0];
+                console.log(this.responseText);
+            }
+
+        };
+        var server = "http://localhost/2021-01";
+        xhttp.open("GET", server, true);
+        xhttp.send();
+    }
+
     function monitoring() {
         document.getElementById("value").innerText = pvData['scwookHost:ai1'];
     }
 
     window.onload = function () {
 
-        var getPVData = setInterval(getData, 2000);
-        var startMonitoring = setInterval(monitoring, 1000);
+        //var getPVData = setInterval(getData, 2000);
+        var getDBData = setInterval(getScheduleDatabase, 2000);
+        //var startMonitoring = setInterval(monitoring, 1000);
     }
 </script>
 
